# knowledge-observer

./: .gitattributes  .gitignore  Cargo.toml  README.md  RELEASING.md  release.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
commands/: view.md
hooks/: hooks.json
src/: cli.rs  config.rs  dispatch.rs  ephemeral.rs  error.rs  ipc.rs  main.rs  mcp.rs  view.rs
src/observer/: agent.rs  apply.rs  contract.rs  daemon.rs  mod.rs  tail.rs
src/store/: knowledge_store.rs  migrate.rs  mod.rs  observer_hint.rs  observer_state.rs  observer_stats.rs
src/view/: index.html
